fixed click eventhandlers / added console logs to see if toggling visibility is working

--- a/style.css
+++ b/style.css
@@ -24,8 +24,10 @@
 
 #hidden4 {
     visibility: hidden;
+    position: relative;
 }
 
 #hidden5 {
     visibility: hidden;
+    position: relative;
 }
